@@ -9,6 +9,8 @@
      ARCH: QuickSearch is moved to KrView from Detailed/Brief views
      ARCH: Keyboard handling is moved to KrView from Detailed/Brief views
 
+    FIXED: calc space doesn't work on remote file systems
+    FIXED: searcher doesn't start because of corrupt config files
     FIXED: Konfigurator doesn't detect every mimetype for "zip" files
     FIXED: Konfigurator keeps its original size
     FIXED: Konfigurator has scrollbars if necessary.
